--- a/src/app/quota/quota.component.scss
+++ b/src/app/quota/quota.component.scss
@@ -1,59 +1,34 @@
-ion-item {
-  --padding-start: 0;
-  --inner-padding-end: 0;
-}
-
-ion-label {
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-
-ion-item h2 {
-  font-weight: 600;
-  margin: 0;
-}
-
-ion-item p {
-  text-overflow: ellipsis;
+.card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 3px;
   overflow: hidden;
-  white-space: nowrap;
-  width: 95%;
-}
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 
-ion-item .date {
-  float: right;
-  align-items: center;
-  display: flex;
-}
+  .title {
+    width: 100%;
+    position: absolute;
+    bottom: 8px;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 24px;
+    text-transform: capitalize;
+    color: rgb(23, 23, 23);
+  }
 
-ion-item ion-icon {
-  color: #c9c9ca;
-}
-
-ion-item ion-note {
-  font-size: 15px;
-  margin-right: 8px;
-  font-weight: normal;
-}
-
-ion-item ion-note.md {
-  margin-right: 14px;
-}
-
-.dot {
-  display: block;
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  align-self: start;
-  margin: 16px 10px 16px 16px;
-}
-
-.dot-unread {
-  background: var(--ion-color-primary);
-}
-
-ion-footer ion-title {
-  font-size: 11px;
-  font-weight: normal;
+  .overlay {
+    background: linear-gradient(transparent 60%, rgb(255 255 255 / 92%) 100%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
