--- a/src/app/view-quota/view-quota.page.html
+++ b/src/app/view-quota/view-quota.page.html
@@ -15,7 +15,7 @@
     <ion-list [inset]="true">
       <ion-item *ngFor="let i of quota | quotaValue">
         <ion-label>
-          {{i.detail}}
+          {{i.date}}
         </ion-label>
         <ion-label class="brl">
           R$ {{ i.value }}
