--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 apx-chart {
     color: black;
