--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -17,6 +17,14 @@
           <ion-icon name="key-sharp" slot="start"></ion-icon>
           <ion-label>Trocar senha</ion-label>
         </ion-item>
+        <ion-item (click)="changeProfileData()">
+          <ion-icon name="pencil-sharp" slot="start"></ion-icon>
+          <ion-label>Alterar perfil</ion-label>
+        </ion-item>
+        <ion-item (click)="deleteAccount()">
+          <ion-icon name="trash-sharp" slot="start"></ion-icon>
+          <ion-label>Excluir conta</ion-label>
+        </ion-item>
         <ion-item (click)="logout()">
           <ion-icon name="log-out-outline" slot="start"></ion-icon>
           <ion-label>Sair</ion-label>
