--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,10 @@
 apx-chart {
     color: black;
 }
+
+.delete {
+    background-color: #a44646 !important;
+    --background-color: #a44646 !important;
+    background: #a44646 !important;
+    --background: #a44646 !important;
+}
