--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,7 @@ apx-chart {
     background: #a44646 !important;
     --background: #a44646 !important;
 }
+
+.apexcharts-yaxis-texts-g > text {
+    fill: white;
+}
