--- a/src/app/quota/quota.component.scss
+++ b/src/app/quota/quota.component.scss
@@ -4,10 +4,19 @@
   height: 100%;
   border-radius: 3px;
   overflow: hidden;
-  img {
+  .cover {
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+
+  .icon {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    width: 2em;
+    height: 2em;
+    z-index: 999;
   }
 
   .title {
